# module1-bank-converter

./: .gitignore  Cargo.toml  README.md
src/: converter.rs  errors.rs  lib.rs  models.rs
src/converter/: parser.rs  reader.rs  writer.rs
src/examples/: cli.rs
src/macros/: struct_csv.rs
src/models/: camt053.rs  csv.rs  mt940.rs  writabledata.rs
tests/: tests.rs
