[package]
name = "bank-converter"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"]}
serde-xml-rs = "0.8"
csv = "1.4"
thiserror = "2.0"
regex = "1.12.2"

[[example]]
name = "cli"
path = "src/examples/cli.rs"

[[test]]
name = "lib_tests"
path = "tests/tests.rs"